# estrategias-cdmx

./: README.md  _quarto.yml  presentacion.qmd  presentacion.quarto_ipynb_2  pyproject.toml  refs.bib  reporte.docx  reporte.html  reporte.qmd  reporte.quarto_ipynb_1  reporte.quarto_ipynb_2  reporte.quarto_ipynb_3  reporte.quarto_ipynb_4  reporte.quarto_ipynb_5  reporte.quarto_ipynb_6  reporte.quarto_ipynb_7
.github/workflows/: pages.yml
docs/: index.html
notebooks/: 001_clima.ipynb  002_analisis.ipynb  003_frio.ipynb  004_frio.ipynb
osm/: 001_volumetria.osm  002_zonas.osm  003_materiales.osm  004_constructions.osm  005_construction_sets.osm  005_techo_piso.osm  006_construction_sets.osm  007_surface5_nosun.osm  008_ventanas.osm  009_cah.osm  010_mas_ventanas.osm  012_measures.osm  013_modificacion.osm  014_a0p25.osm  015_orientacion.osm  016_adobe.osm  017_orientacion.osm  018_orientacion-90.osm  018_protecciones.osm  019_ventilacion_nocturna.osm  020_a0p7.osm  021_ventilacion_diurna.osm  022_3edb.osm
osm/001_volumetria/: workflow.osw
osm/002_zonas/: floorplan.json  workflow.osw
osm/003_materiales/: workflow.osw
osm/004_constructions/: workflow.osw
osm/005_construction_sets/: workflow.osw
osm/005_techo_piso/: workflow.osw
osm/006_construction_sets/: workflow.osw
osm/007_surface5_nosun/: out.osw  stdout  workflow.osw
osm/008_ventanas/: floorplan.json  out.osw  stdout  workflow.osw
osm/009_cah/: floorplan.json  out.osw  stdout  workflow.osw
osm/010_mas_ventanas/: floorplan.json  out.osw  stdout  workflow.osw
osm/011_cambio_const_set/: out.osw  (+2 more)
(+332 files in other folders)
