[project]
name = "estrategias-cdmx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iertools",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "markitdown[all]>=0.1.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pvlib>=0.15.1",
    "tabulate>=0.10.0",
]

[tool.uv.sources]
iertools = { git = "https://github.com/AltamarMx/iertools.git" }
